agregando archivos a proyecto final (assets, cargando lineas de codigo, etc)

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./css/styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Feber Servicios</title>
-    <meta name="description" content="Feber soluciones | Somos una Empresa que ofrece servicios al mercado de la Construcción y Mantenimiento en general.">
+    <meta name="description" content="Feber Servicios | Somos una Empresa que ofrece servicios al mercado de la Construcción y Mantenimiento en general.">
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="" class="link-instagram">Instagram</a></li>
-                    <li><a href="" class="link-facebook">Facebook</a></li>
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -40,7 +40,7 @@
         <section class="banner container">
             <div class="banner__content">
                 <div>
-                    <h1>Bienvenidos.</h1>
+                    <h1>Soluciones.</h1>
                     <h2>Servicios integrales de mantenimiento y construcción.</h2>
                     <p>Somos una Empresa que ofrece servicios al mercado de la <span>Construcción y 
                         Mantenimiento</span> en general. 
@@ -58,17 +58,14 @@
             <div class="card card-base">
                 <article class="card-1">
                     <img src="./assets/icono-presupuesto.png" alt="Feber Servicios Electricidad">
-                    <h2>Presupuestos</h2>
                     <p>Realizamos presupuestos a medida.</p>
                 </article>
                 <article class="card-1">
                     <img src="./assets/icono-tarjeta.png" alt="Feber Servicios Electricidad">
-                    <h2>Formas de pago</h2>
                     <p>Efectivo, transferencia bancaria, Mercado Pago.</p>
                 </article>
                 <article class="card-2">
                     <img src="./assets/icono-whatsapp.png" alt="Feber Servicios Electricidad">
-                    <h2>WhatsApp</h2>
                     <p>Cualquier duda puede consultar por nuestro número de Whats App.</p>
                 </article>
             </div>
@@ -80,7 +77,7 @@
             <div class="servicios__content">
                 <article>
                     <img src="./assets/icono-electricista.png" alt="Feber Electricidad Icono"/>
-                    </h1>01 / Electricista</h1>
+                    <h1>01 / Electricista</h1>
                     <p>Instalaciones nuevas - Remodelaciones - Iluminación - Trabajos en altura - Montaje de obras - Medición de Puesta a tierra resolución SRT 900/15 Ensayos - Habilitación Capital Federal y Provincia.</p>
                     <a class="btn-principal" href="./pages/servicios.html">Saber más</a>
                 </article>
@@ -125,12 +122,12 @@
                     <p>Electricista matriculado.</p>
                 </article>
                 <article>
-                    <img src="./assets/staff1.png" alt="Feber Electricidad Icono"/>
+                    <img src="./assets/staff2.png" alt="Feber Electricidad Icono"/>
                     <h1>Ezequiel Berdugo</h1>
                     <p>Gasista, Refrigeración y Plomería</p>
                 </article>
                 <article>
-                    <img src="./assets/staff1.png" alt="Feber Electricidad Icono"/>
+                    <img src="./assets/staff3.png" alt="Feber Electricidad Icono"/>
                     <h1>Daniel Ferreyra</h1>
                     <p>Maestro Mayor de Obra - Gasista Matriculado</p>
                   </article>
@@ -155,8 +152,8 @@
                 </div>
                 <div>
                     <ul>
-                        <li><a href="" class="link-instagram">Instagram</a></li>
-                        <li><a href="" class="link-facebook">Facebook</a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
