--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Contacto</title>
     <meta name="description" content="Feber Servicios | Ofrecemos servicios de mantenimiento de electricidad, gas y plomería. Consulte sin compromiso.">
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="" class="link-instagram">Instagram</a></li>
-                    <li><a href="" class="link-facebook">Facebook</a></li>
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -47,6 +47,22 @@
                 <div class="banner__content-img">
                     <img src="../assets/banner-contacto.png" alt="Feber Servicios Banner"/>
                 </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="card card-base">
+                <article class="card-1">
+                    <img src="../assets/icono-presupuesto.png" alt="Feber Servicios Electricidad">
+                    <p>Realizamos presupuestos a medida.</p>
+                </article>
+                <article class="card-1">
+                    <img src="../assets/icono-tarjeta.png" alt="Feber Servicios Electricidad">
+                    <p>Efectivo, transferencia bancaria, Mercado Pago.</p>
+                </article>
+                <article class="card-2">
+                    <img src="../assets/icono-whatsapp.png" alt="Feber Servicios Electricidad">
+                    <p>Cualquier duda puede consultar por nuestro número de Whats App.</p>
+                </article>
             </div>
         </section>
         <section class="servicios container">
@@ -90,8 +106,8 @@
                 </div>
                 <div>
                     <ul>
-                        <li><a href="" class="link-instagram">Instagram</a></li>
-                        <li><a href="" class="link-facebook">Facebook</a></li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
