--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Servicios</title>
     <meta name="description" content="Servicios | Gasista, electricidad y plomeria. Ofrecemos presupuestos a medida.">
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="" class="link-instagram">Instagram</a></li>
-                    <li><a href="" class="link-facebook">Facebook</a></li>
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -40,7 +40,7 @@
         <section class="banner container">
             <div class="banner__content">
                 <div>
-                    <h1>Servicios: Gasista, Electridad y Plomería.</h1>
+                    <h1>Servicios</h1>
                     <p>Somos una Empresa que ofrece servicios al mercado de la <span>Construcción y 
                         Mantenimiento en general.</span>  
                     Realizamos asistencia domiciliaria para compañías de seguros, 
