--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/styles.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Sobre nosotros</title>
     <meta name="description" content="Feber Servicios es una empresa familiar que se dedica al mantenimiento y ofrece servicios de construcción.">
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="" class="link-instagram">Instagram</a></li>
-                    <li><a href="" class="link-facebook">Facebook</a></li>
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -61,12 +61,12 @@
                     <p>Electricista matriculado.</p>
                 </article>
                 <article>
-                    <img src="../assets/staff1.png" alt="Feber Electricidad Icono"/>
+                    <img src="../assets/staff2.png" alt="Feber Electricidad Icono"/>
                     <h1>Ezequiel Berdugo</h1>
                     <p>Gasista, Refrigeración y Plomería</p>
                 </article>
                 <article>
-                    <img src="../assets/staff1.png" alt="Feber Electricidad Icono"/>
+                    <img src="../assets/staff3.png" alt="Feber Electricidad Icono"/>
                     <h1>Daniel Ferreyra</h1>
                     <p>Maestro Mayor de Obra - Gasista Matriculado</p>
                   </article>
@@ -91,8 +91,8 @@
                 </div>
                 <div>
                     <ul>
-                        <li><a href="" class="link-instagram">Instagram</li>
-                        <li><a href="" class="link-facebook">Facebook</li>
+                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
