correccion archivo package.json

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div>
+                <div></div>
                     <ul>
                         <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
