agregando enlaces a redes sociales y nro de whatsapp

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -47,7 +47,7 @@
                     Realizamos asistencia domiciliaria para compañías de seguros, 
                     empresas, consorcios, barrios cerrados y particulares.</p>
                     <a class="btn-principal" href="./pages/contacto.html">Consultar</a>
-                    <a class="btn-whatsapp" href="#">WhatsApp</a>
+                    <a class="btn-whatsapp" href="https://api.whatsapp.com/send?phone=541156355415">WhatsApp</a>
                 </div>
                 <div class="banner__content-img">
                     <img src="./assets/banner.png" alt="Feber Servicios Banner"/>
@@ -82,13 +82,13 @@
                     <a class="btn-principal" href="./pages/servicios.html">Saber más</a>
                 </article>
                 <article>
-                    <img src="./assets/icono-gasista.png" alt="Feber Electricidad Icono"/>
+                    <img src="./assets/icono-gasista.png" alt="Feber Gasista Icono"/>
                     <h1>02 / Gasista</h1>
                     <p>Instalaciones nuevas - Reparación - Desarrollo de planos - Habilitaciones por corte de suministro - Instalación de artefactos - Prueba de hermeticidad - Informe técnico en obras.</p>
                     <a class="btn-principal" href="./pages/servicios.html">Saber más</a>
                 </article>
                 <article>
-                    <img src="./assets/icono-plomeria.png" alt="Feber Electricidad Icono"/>
+                    <img src="./assets/icono-plomeria.png" alt="Feber Plomería Icono"/>
                     <h1>03 / Plomeria</h1>
                     <p>Cambio de cañerías - Instalación de tanques - Trabajos en cañerías de plomo -hidro bronce- Instalación de bombas presurizadoras - Elevadoras Instalación de artefactos de baños y sus accesorios.</p>
                     <a class="btn-principal" href="./pages/servicios.html">Saber más</a>
@@ -152,8 +152,8 @@
                 </div>
                 <div></div>
                     <ul>
-                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com""><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com""><i class="fa-brands fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
