--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -42,7 +42,7 @@
                 <div>
                     <h1>Contacto</h1>
                     <p><span>¿En que podemos ayudarlo?.</span> Estamos a su disposición para asesorarlo, nuestro equipo de trabajo respondera a la brevedad con la mejor solución disponible.</p>
-                    <a class="btn-whatsapp" href="">WhatsApp</a>
+                    <a class="btn-whatsapp" href="https://api.whatsapp.com/send?phone=541156355415">WhatsApp</a>
                 </div>
                 <div class="banner__content-img">
                     <img src="../assets/banner-contacto.png" alt="Feber Servicios Banner"/>
@@ -67,7 +67,7 @@
         </section>
         <section class="servicios container">
             <div class="servicios__content-title">
-                <p>Formulario</p>
+                <p>Formulario de consulta</p>
             </div>
         </section>
         <section class="formulario container">
@@ -106,8 +106,8 @@
                 </div>
                 <div>
                     <ul>
-                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
