--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -43,7 +43,7 @@
                     <h1>Nuestro Staff!</h1>
                     <h2>Servicios integrales de mantenimiento y construcción.</h2>
                     <p>Estamos conformados por un equipo de <span>profesionales y técnicos matriculados</span> ,con una amplia experiencia en los rubros de mantenimientos e instalación ya mencionados.</p>
-                    <a class="btn-whatsapp" href="">WhatsApp</a>
+                    <a class="btn-whatsapp" href="https://api.whatsapp.com/send?phone=541156355415">WhatsApp</a>
                 </div>
                 <div class="banner__content-img">
                     <img src="../assets/banner-nosotros.png" alt="Feber Servicios Banner"/>
@@ -91,8 +91,8 @@
                 </div>
                 <div>
                     <ul>
-                        <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
