--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href=""><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -45,7 +45,7 @@
                         Mantenimiento en general.</span>  
                     Realizamos asistencia domiciliaria para compañías de seguros, 
                     empresas, consorcios, barrios cerrados y particulares.</p>
-                    <a class="btn-whatsapp" href="">WhatsApp</a>
+                    <a class="btn-whatsapp" href="https://api.whatsapp.com/send?phone=541156355415">WhatsApp</a>
                 </div>
                 <div class="banner__content-img">
                     <img src="../assets/banner-servicios.png" alt="Feber Servicios Banner"/>
@@ -61,19 +61,19 @@
                     <img src="../assets/icono-electricista.png" alt="Feber Electricidad Icono"/>
                     <h1>01 / Electricista</h1>
                     <p>Instalaciones nuevas - Remodelaciones - Iluminación - Trabajos en altura - Montaje de obras - Medición de Puesta a tierra resolución SRT 900/15 Ensayos - Habilitación Capital Federal y Provincia.</p>
-                    <a class="btn-principal" href="./servicios.html">Saber más</a>
+                    <a class="btn-principal" href="./contacto.html">Consultar</a>
                 </article>
                 <article>
                     <img src="../assets/icono-gasista.png" alt="Feber Electricidad Icono"/>
                     <h1>02 / Gasista</h1>
                     <p>Instalaciones nuevas - Reparación - Desarrollo de planos - Habilitaciones por corte de suministro - Instalación de artefactos - Prueba de hermeticidad - Informe técnico en obras.</p>
-                    <a class="btn-principal" href="./servicios.html">Saber más</a>
+                    <a class="btn-principal" href="./contacto.html">Consultar</a>
                 </article>
                 <article>
                     <img src="../assets/icono-plomeria.png" alt="Feber Electricidad Icono"/>
                     <h1>03 / Plomeria</h1>
                     <p>Cambio de cañerías - Instalación de tanques - Trabajos en cañerías de plomo -hidro bronce- Instalación de bombas presurizadoras - Elevadoras Instalación de artefactos de baños y sus accesorios.</p>
-                    <a class="btn-principal" href="./servicios.html">Saber más</a>
+                    <a class="btn-principal" href="./contacto.html">Consultar</a>
                 </article>
             </div>
         </section>
@@ -112,8 +112,8 @@
                 </div>
                 <div class="footer__content-rrss">
                     <ul>
-                        <li><a href="" class="link-instagram">Instagram</a></li>
-                        <li><a href="" class="link-facebook">Facebook</a></li>
+                        <li><a href="https://www.instagram.com" class="link-instagram">Instagram</a></li>
+                        <li><a href="https://www.facebook.com" class="link-facebook">Facebook</a></li>
                     </ul>
                 </div>
             </div>
