modificando paginas, un h1 por pagina

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <section class="banner container">
             <div class="banner__content">
                 <div>
-                    <h1>Soluciones.</h1>
-                    <h2>Servicios integrales de mantenimiento y construcción.</h2>
+                    <h1>Servicios de mantenimiento</h1>
+                    <h2>Gas, Luz & Plomeria</h2>
                     <p>Somos una Empresa que ofrece servicios al mercado de la <span>Construcción y 
                         Mantenimiento</span> en general. 
                     Realizamos asistencia domiciliaria para compañías de seguros, 
@@ -77,19 +77,19 @@
             <div class="servicios__content">
                 <article>
                     <img src="./assets/icono-electricista.png" alt="Feber Electricidad Icono"/>
-                    <h1>01 / Electricista</h1>
+                    <h2>01 / Electricista</h2>
                     <p>Instalaciones nuevas - Remodelaciones - Iluminación - Trabajos en altura - Montaje de obras - Medición de Puesta a tierra resolución SRT 900/15 Ensayos - Habilitación Capital Federal y Provincia.</p>
                     <a class="btn-principal" href="./pages/servicios.html">Saber más</a>
                 </article>
                 <article>
                     <img src="./assets/icono-gasista.png" alt="Feber Gasista Icono"/>
-                    <h1>02 / Gasista</h1>
+                    <h2>02 / Gasista</h2>
                     <p>Instalaciones nuevas - Reparación - Desarrollo de planos - Habilitaciones por corte de suministro - Instalación de artefactos - Prueba de hermeticidad - Informe técnico en obras.</p>
                     <a class="btn-principal" href="./pages/servicios.html">Saber más</a>
                 </article>
                 <article>
                     <img src="./assets/icono-plomeria.png" alt="Feber Plomería Icono"/>
-                    <h1>03 / Plomeria</h1>
+                    <h2>03 / Plomeria</h2>
                     <p>Cambio de cañerías - Instalación de tanques - Trabajos en cañerías de plomo -hidro bronce- Instalación de bombas presurizadoras - Elevadoras Instalación de artefactos de baños y sus accesorios.</p>
                     <a class="btn-principal" href="./pages/servicios.html">Saber más</a>
                 </article>
@@ -118,17 +118,17 @@
             <div class="servicios__content">
                 <article>
                     <img src="./assets/staff1.png" alt="Feber Electricidad Icono"/>
-                    <h1>Nahuel Berdugo</h1>
+                    <h2>Nahuel Berdugo</h2>
                     <p>Electricista matriculado.</p>
                 </article>
                 <article>
                     <img src="./assets/staff2.png" alt="Feber Electricidad Icono"/>
-                    <h1>Ezequiel Berdugo</h1>
+                    <h2>Ezequiel Berdugo</h2>
                     <p>Gasista, Refrigeración y Plomería</p>
                 </article>
                 <article>
                     <img src="./assets/staff3.png" alt="Feber Electricidad Icono"/>
-                    <h1>Daniel Ferreyra</h1>
+                    <h2>Daniel Ferreyra</h2>
                     <p>Maestro Mayor de Obra - Gasista Matriculado</p>
                   </article>
             </div>
