modificando texto de pagina index y servicios

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -66,7 +66,7 @@
                 <article>
                     <img src="../assets/icono-gasista.png" alt="Feber Electricidad Icono"/>
                     <h2>02 / Gasista</h2>
-                    <p>Instalaciones nuevas - Reparación - Desarrollo de planos - Habilitaciones por corte de suministro - Instalación de artefactos - Prueba de hermeticidad - Informe técnico en obras.</p>
+                    <p>Instalaciones nuevas - Reparación - Desarrollo de planos - Habilitaciones por corte de suministro - Instalación de artefactos - Prueba de hermeticidad - Informe técnico de obras en proceso de caracter obligatorio.</p>
                     <a class="btn-principal" href="./contacto.html">Consultar</a>
                 </article>
                 <article>
