modificando banner, agregando keywords, actualizando textos, optimizando media query

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Contacto</title>
     <meta name="description" content="Feber Servicios | Ofrecemos servicios de mantenimiento de electricidad, gas y plomería. Consulte sin compromiso.">
+    <meta name="keywords" content="Servicios de plomeria, electricidad, mantenimiento, gasista, instalaciones, plomeria">
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -37,15 +38,12 @@
         </div>
     </header>
     <main>
-        <section class="banner container">
-            <div class="banner__content">
+        <section class="banner">
+            <div class="banner__content container">
                 <div>
                     <h1>Contacto</h1>
                     <p><span>¿En que podemos ayudarlo?.</span> Estamos a su disposición para asesorarlo, nuestro equipo de trabajo respondera a la brevedad con la mejor solución disponible.</p>
                     <a class="btn-whatsapp" href="https://api.whatsapp.com/send?phone=541156355415">WhatsApp</a>
-                </div>
-                <div class="banner__content-img">
-                    <img src="../assets/banner-contacto.png" alt="Feber Servicios Banner"/>
                 </div>
             </div>
         </section>
