--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Servicios</title>
     <meta name="description" content="Servicios | Gasista, electricidad y plomeria. Ofrecemos presupuestos a medida.">
+    <meta name="keywords" content="Servicios de plomeria, electricidad, mantenimiento, gasista, instalaciones, plomeria">
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -37,8 +38,8 @@
         </div>
     </header>
     <main>
-        <section class="banner container">
-            <div class="banner__content">
+        <section class="banner">
+            <div class="banner__content container">
                 <div>
                     <h1>Servicios</h1>
                     <p>Somos una Empresa que ofrece servicios al mercado de la <span>Construcción y 
@@ -46,9 +47,6 @@
                     Realizamos asistencia domiciliaria para compañías de seguros, 
                     empresas, consorcios, barrios cerrados y particulares.</p>
                     <a class="btn-whatsapp" href="https://api.whatsapp.com/send?phone=541156355415">WhatsApp</a>
-                </div>
-                <div class="banner__content-img">
-                    <img src="../assets/banner-servicios.png" alt="Feber Servicios Banner"/>
                 </div>
             </div>
         </section>
