--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Feber Servicios</title>
     <meta name="description" content="Feber Servicios | Somos una Empresa que ofrece servicios al mercado de la Construcción y Mantenimiento en general.">
+    <meta name="keywords" content="Servicios de plomeria, electricidad, mantenimiento, gasista, instalaciones, plomeria">
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -37,20 +38,17 @@
         </div>
     </header>
     <main>
-        <section class="banner container">
-            <div class="banner__content">
+        <section class="banner">
+            <div class="banner__content container">
                 <div>
                     <h1>Servicios de mantenimiento</h1>
-                    <h2>Gas, Luz & Plomeria</h2>
+                    <h2>Gas, Luz & Plomería</h2>
                     <p>Somos una Empresa que ofrece servicios al mercado de la <span>Construcción y 
                         Mantenimiento</span> en general. 
                     Realizamos asistencia domiciliaria para compañías de seguros, 
                     empresas, consorcios, barrios cerrados y particulares.</p>
                     <a class="btn-principal" href="./pages/contacto.html">Consultar</a>
                     <a class="btn-whatsapp" href="https://api.whatsapp.com/send?phone=541156355415">WhatsApp</a>
-                </div>
-                <div class="banner__content-img">
-                    <img src="./assets/banner.png" alt="Feber Servicios Banner"/>
                 </div>
             </div>
         </section>
