--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Sobre nosotros</title>
     <meta name="description" content="Feber Servicios es una empresa familiar que se dedica al mantenimiento y ofrece servicios de construcción.">
+    <meta name="keywords" content="Servicios de plomeria, electricidad, mantenimiento, gasista, instalaciones, plomeria">
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -37,16 +38,13 @@
         </div>
     </header>
     <main>
-        <section class="banner container">
-            <div class="banner__content">
+        <section class="banner">
+            <div class="banner__content container">
                 <div>
                     <h1>Nuestro Staff!</h1>
                     <h2>Servicios integrales de mantenimiento y construcción.</h2>
                     <p>Estamos conformados por un equipo de <span>profesionales y técnicos matriculados</span> ,con una amplia experiencia en los rubros de mantenimientos e instalación ya mencionados.</p>
                     <a class="btn-whatsapp" href="https://api.whatsapp.com/send?phone=541156355415">WhatsApp</a>
-                </div>
-                <div class="banner__content-img">
-                    <img src="../assets/banner-nosotros.png" alt="Feber Servicios Banner"/>
                 </div>
             </div>
         </section>
