corrigiendo media query

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Feber Servicios</title>
     <meta name="description" content="Feber Servicios | Somos una Empresa que ofrece servicios al mercado de la Construcción y Mantenimiento en general.">
-    <meta name="keywords" content="Servicios de plomeria, electricidad, mantenimiento, gasista, instalaciones, plomeria">
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -148,7 +147,7 @@
                         </ul>
                     </nav>
                 </div>
-                <div></div>
+                <div>
                     <ul>
                         <li><a href="https://www.instagram.com""><i class="fa-brands fa-instagram"></i></a></li>
                         <li><a href="https://www.facebook.com""><i class="fa-brands fa-facebook"></i></a></li>
