agregando boton de ewhatsapp a mi proyecto

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -117,5 +117,8 @@
             </div>
         </div>
     </footer>
+    <div class="whatsapp-icono">
+        <a href="https://api.whatsapp.com/send?phone=541156355415"><i class="fa-brands fa-whatsapp"></i></a>
+    </div>
 </body>
 </html>
