--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -95,6 +95,9 @@
                 </div>
             </div>
         </div>
-    </footer>   
+    </footer>
+    <div class="whatsapp-icono">
+        <a href="https://api.whatsapp.com/send?phone=541156355415"><i class="fa-brands fa-whatsapp"></i></a>
+    </div>
 </body>
 </html>
