agregando estilos a iconos rrss

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -108,10 +108,10 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="footer__content-rrss">
+                <div>
                     <ul>
-                        <li><a href="https://www.instagram.com" class="link-instagram">Instagram</a></li>
-                        <li><a href="https://www.facebook.com" class="link-facebook">Facebook</a></li>
+                        <li><a href="https://www.instagram.com""><i class="fa-brands fa-instagram btn-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com""><i class="fa-brands fa-facebook btn-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
