--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram btn-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook btn-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -149,8 +149,8 @@
                 </div>
                 <div>
                     <ul>
-                        <li><a href="https://www.instagram.com""><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="https://www.facebook.com""><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com""><i class="fa-brands fa-instagram btn-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com""><i class="fa-brands fa-facebook btn-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
