--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -31,8 +31,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
-                    <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="https://www.instagram.com""><i class="fa-brands fa-instagram btn-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com""><i class="fa-brands fa-facebook btn-facebook"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -89,8 +89,8 @@
                 </div>
                 <div>
                     <ul>
-                        <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram"></i></a></li>
-                        <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook"></i></a></li>
+                        <li><a href="https://www.instagram.com""><i class="fa-brands fa-instagram btn-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com""><i class="fa-brands fa-facebook btn-facebook"></i></a></li>
                     </ul>
                 </div>
             </div>
