agregando menu mobile

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -82,7 +82,7 @@
                 </select>
                 <label for="consulta">Ingrese su mensaje:</label>
                 <textarea name="consulta" id="consulta" cols="30" rows="10" placeholder="En que podemos ayudarlo?"></textarea>
-                <button type="submit">Envíar mensaje</button>
+                <a href="#"><button type="submit">Envíar mensaje</button></a>
             </form>
         </section>
     </main>
