--- a/index.html
+++ b/index.html
@@ -27,8 +27,19 @@
                         <li><a href="./pages/contacto.html">Contacto</a></li>
                     </ul>
                 </nav>
+                <div class="header__content-navbar-mobile">
+                    <i class="fa-solid fa-bars"></i>
+                    <ul>
+                        <li><a href="./index.html">Inicio</a></li>
+                        <li><a href="./pages/servicios.html">Servicios</a></li>
+                        <li><a href="./pages/sobre-nosotros.html">Nosotros</a></li>
+                        <li><a href="./pages/contacto.html">Contacto</a></li>
+                        <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram btn-instagram"></i></a></li>
+                        <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook btn-facebook"></i></a></li>
+                    </ul>
+                </div>
             </div>
-            <div>
+            <div class="header__content-rrss">
                 <ul>
                     <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram btn-instagram"></i></a></li>
                     <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook btn-facebook"></i></a></li>
