--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -32,9 +32,9 @@
                     <i class="fa-solid fa-bars"></i>
                     <ul>
                         <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="./pages/servicios.html">Servicios</a></li>
-                        <li><a href="./pages/sobre-nosotros.html">Nosotros</a></li>
-                        <li><a href="./pages/contacto.html">Contacto</a></li>
+                        <li><a href="./servicios.html">Servicios</a></li>
+                        <li><a href="./sobre-nosotros.html">Nosotros</a></li>
+                        <li><a href="./contacto.html">Contacto</a></li>
                         <li><a href="https://www.instagram.com"><i class="fa-brands fa-instagram btn-instagram"></i></a></li>
                         <li><a href="https://www.facebook.com"><i class="fa-brands fa-facebook btn-facebook"></i></a></li>
                     </ul>
