agregando barra a meta desc y keyw

--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Sobre nosotros</title>
-    <meta name="description" content="Feber Servicios es una empresa familiar que se dedica al mantenimiento y ofrece servicios de construcción.">
-    <meta name="keywords" content="Servicios de plomeria, electricidad, mantenimiento, gasista, instalaciones, plomeria">
+    <meta name="description" content="Feber Servicios es una empresa familiar que se dedica al mantenimiento y ofrece servicios de construcción."/>
+    <meta name="keywords" content="Servicios de plomeria, electricidad, mantenimiento, gasista, instalaciones, plomeria"/>
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
 </head>
 <body>
