--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet"/>
     <title>Servicios</title>
-    <meta name="description" content="Servicios | Gasista, electricidad y plomeria. Ofrecemos presupuestos a medida.">
-    <meta name="keywords" content="Servicios de plomeria, electricidad, mantenimiento, gasista, instalaciones, plomeria">
+    <meta name="description" content="Servicios | Gasista, electricidad y plomeria. Ofrecemos presupuestos a medida."/>
+    <meta name="keywords" content="Servicios de plomeria, electricidad, mantenimiento, gasista, instalaciones, plomeria"/>
     <script src="https://kit.fontawesome.com/521306ceec.js" crossorigin="anonymous"></script>
 </head>
 <body>
